force-app/main/default/objects/VasSupplierTable__c/VasSupplierTable__c.object-meta.xml
<CustomObject>
    <description>Tabella in cui Mulesoft andrà a popolare delle righe da processare in SFDC in un Batch giornaliero</description>
    <label>Tabella VAS Fornitori</label>
    <nameField>
        <displayFormat>TV-{00000}</displayFormat>
        <label>Codice</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tabelle VAS Fornitori</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>