force-app/main/default/objects/VasSupplierTable__c/fields/VasCommunicationDate__c.field-meta.xml
<CustomField>
    <fullName>VasCommunicationDate__c</fullName>
    <label>Data comunicazione</label>
    <type>Date</type>
</CustomField>