force-app/main/default/objects/VasSupplierTable__c/fields/VasCommunicationProgressive__c.field-meta.xml
<CustomField>
    <fullName>VasCommunicationProgressive__c</fullName>
    <label>Numero comunicazione</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>