force-app/main/default/objects/VasSupplierTable__c/fields/VasDeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>VasDeliveryDate__c</fullName>
    <label>Data presunta consegna</label>
    <type>Date</type>
</CustomField>