force-app/main/default/objects/VasSupplierTable__c/fields/VasDisabledDate__c.field-meta.xml
<CustomField>
    <fullName>VasDisabledDate__c</fullName>
    <label>Data disattivato/disdetto</label>
    <type>Date</type>
</CustomField>