force-app/main/default/objects/VasSupplierTable__c/fields/VasEffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>VasEffectiveDate__c</fullName>
    <label>Data decorrenza</label>
    <type>Date</type>
</CustomField>