force-app/main/default/objects/VasSupplierTable__c/fields/VasReplacementDate__c.field-meta.xml
<CustomField>
    <fullName>VasReplacementDate__c</fullName>
    <label>Data  Sostituito</label>
    <type>Date</type>
</CustomField>