force-app/main/default/objects/VasSupplierTable__c/fields/VasSupplier__c.field-meta.xml
<CustomField>
    <fullName>VasSupplier__c</fullName>
    <label>Fornitore</label>
    <length>255</length>
    <type>Text</type>
</CustomField>