force-app/main/default/objects/VasSupplierTable__c/fields/VasSupplierStatusDetails__c.field-meta.xml
<CustomField>
    <fullName>VasSupplierStatusDetails__c</fullName>
    <label>Dettaglio stato fornitore</label>
    <type>TextArea</type>
</CustomField>