force-app/main/default/objects/VasSupplierTable__c/fields/VasTrackingNr__c.field-meta.xml
<CustomField>
    <fullName>VasTrackingNr__c</fullName>
    <label>TrackingNr</label>
    <length>255</length>
    <type>Text</type>
</CustomField>